--- a/src/index.css
+++ b/src/index.css
@@ -357,7 +357,7 @@ a{
 .contact-us-section {
     position: relative;
     max-width: 100vw !important;
-    background-image: url('bg-imgs/big-2.jpeg');
+    background-image: url('/bg-imgs/big-2.jpeg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
